@@ -1,0 +1,5 @@
+int
+test (int a)
+{
+  return a + a;
+}
