@@ -1,3 +1,9 @@
+2001-08-04  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
+
+	* dlfcn/Makefile: Add rules for new testcase tststatic.
+	* dlfcn/tststatic.c: New file.
+	* dlfcn/modstatic.c: New file.
+
 2001-08-04  Ulrich Drepper  <drepper@redhat.com>
 
 	* manual/summary.awk: Fix value used for FF.
